spade-tests/src/snapshots/spade_tests__typeinference__good_error_message_for_reg_pattern_type_mismatch.snap
---
source: spade-tests/src/typeinference.rs
---
entity test(clk: clk) -> bool {
    reg(clk) (sample_i, audio_val): bool = {
        true
    };

    true
}


error: Pattern type mismatch
  ┌─ testinput:2:14
  │
2 │     reg(clk) (sample_i, audio_val): bool = {
  │              ^^^^^^^^^^^^^^^^^^^^^  ---- because this has type bool
  │              │                       
  │              expected bool
  │
  = Expected: bool
  =      Got: (_, _)


